# Guerre_de_tanks-CLIENT

./: README.md  README.txt
src/: BoutonManette.cpp  BoutonManette.h  CMakeLists.txt  Explosion.cpp  Explosion.h  GameplayTank.depend  GestionBruits.cpp  GestionBruits.h  GestionExplosion.cpp  GestionExplosion.h  GuerreDeTank-Client.cbp  GuerreDeTank-Client.depend  GuerreDeTank-Client.layout  Joueur.cpp  Joueur.h  MyCamera.cpp  MyCamera.h  MyEventReceiver.cpp  MyEventReceiver.h  MyEventReceiver1.cpp  MyEventReceiver1.h  MyEventReceiver2.cpp  MyEventReceiver2.h  MyGui.cpp  MyGui.h  Shoot.cpp  Shoot.h  TankNormal.cpp  TankNormal.h  client.h  decor.cpp  decor.h  infoPartie.cpp  infoPartie.h  infoPositionRotationJoueur.cpp  infoPositionRotationJoueur.h  main.cpp  vector3d_operateur.cpp  vector3d_operateur.h
src/mesh/: canon.mtl  tank.mtl  untitled.mtl
